--- a/static/.htaccess
+++ b/static/.htaccess
@@ -1,6 +1,9 @@
 RewriteEngine On
 RewriteBase /
 
+
+
+
 # Prevent dot directories (hidden directories like .git) to be exposed to the public
 # Except for the .well-known directory used by LetsEncrypt a.o
 # RewriteRule "/\.|^\.(?!well-known/)" - [F]
@@ -23,7 +26,9 @@ RewriteRule ^es(\/.*)?$ - [L]
 RewriteRule ^pt(\/.*)?$ - [L]
 # Serve files if they exist
 RewriteCond %{REQUEST_FILENAME} -f
+RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ - [L]
+
 ################
 # Force HTTPS: #
 ################
@@ -56,10 +61,10 @@ RewriteRule ^ /en%{REQUEST_URI} [R=301,L]
   ErrorDocument 500 /es/500/index.html
 </ElseIf>
 <ElseIf "%{REQUEST_URI} =~ /^\x2Fpt(\x2F.*)?$/">
-  ErrorDocument 401 /pt/401/index.html
-  ErrorDocument 403 /pt/403/index.html
-  ErrorDocument 404 /pt/404/index.html
-  ErrorDocument 500 /pt/500/index.html
+  ErrorDocument 401 /pt-br/401/index.html
+  ErrorDocument 403 /pt-br/403/index.html
+  ErrorDocument 404 /pt-br/404/index.html
+  ErrorDocument 500 /pt-br/500/index.html
 </ElseIf>
 ##################################
 # Set default locale error pages #
@@ -83,22 +88,22 @@ RewriteRule ^ /en%{REQUEST_URI} [R=301,L]
     Header append Vary User-Agent
 </IfModule>
 
-<IfModule mod_expires.c>
+# <IfModule mod_expires.c>
     ##################################
     # LEVERAGE BROWSER CACHING       #
     ##################################
-    ExpiresActive On
-    ExpiresByType image/jpg "access plus 1 year"
-    ExpiresByType image/jpeg "access plus 1 year"
-    ExpiresByType image/gif "access plus 1 year"
-    ExpiresByType image/png "access plus 1 year"
-    ExpiresByType text/css "access plus 1 month"
-    ExpiresByType application/pdf "access plus 1 month"
-    ExpiresByType text/x-javascript "access plus 1 month"
-    ExpiresByType application/x-shockwave-flash "access plus 1 month"
-    ExpiresByType image/x-icon "access plus 1 year"
-    ExpiresDefault "access plus 2 days"
-</IfModule>
+    # ExpiresActive On
+    # ExpiresByType image/jpg "access plus 1 year"
+    # ExpiresByType image/jpeg "access plus 1 year"
+    # ExpiresByType image/gif "access plus 1 year"
+    # ExpiresByType image/png "access plus 1 year"
+    # ExpiresByType text/css "access plus 1 month"
+    # ExpiresByType application/pdf "access plus 1 month"
+    # ExpiresByType text/x-javascript "access plus 1 month"
+    # ExpiresByType application/x-shockwave-flash "access plus 1 month"
+    # ExpiresByType image/x-icon "access plus 1 year"
+    # ExpiresDefault "access plus 2 days"
+# </IfModule>
 
 #############################################
 # Enforce Strict Transport Security (HSTS): #
