--- a/static/.htaccess
+++ b/static/.htaccess
@@ -18,9 +18,10 @@ RewriteBase /
 ##############################################
 # Skip redirection if locale already present #
 ##############################################
-RewriteRule ^en(\/.*)?$ - [L]
-RewriteRule ^es(\/.*)?$ - [L]
-RewriteRule ^pt(\/.*)?$ - [L]
+ RewriteRule ^en(\/.*)?$ - [L]
+ RewriteRule ^es(\/.*)?$ - [L]
+ RewriteRule ^pt(\/.*)?$ - [L]
+ RewriteRule ^pt-br(\/.*)?$ - [L]
 # Serve files if they exist
 RewriteCond %{REQUEST_FILENAME} -f
 RewriteCond %{REQUEST_FILENAME} !-d
@@ -34,44 +35,44 @@ RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 ##############################
 # Set custom locales if fits #
 ##############################
-RewriteCond %{HTTP:Accept-Language} ^es [NC]
-RewriteRule ^ /es%{REQUEST_URI} [R=301,L]
-RewriteCond %{HTTP:Accept-Language} ^pt-br [NC]
-RewriteRule ^ /pt%{REQUEST_URI} [R=301,L]
+# RewriteCond %{HTTP:Accept-Language} ^es [NC]
+# RewriteRule ^ /es%{REQUEST_URI} [R=301,L]
+# RewriteCond %{HTTP:Accept-Language} ^pt-br [NC]
+# RewriteRule ^ /pt-br%{REQUEST_URI} [R=301,L]
 ###############################################
 # Set default locale if no custom locale fits #
 ###############################################
-RewriteRule ^ /en%{REQUEST_URI} [R=301,L]
+# RewriteRule ^ /en%{REQUEST_URI} [R=301,L]
 ######################################
 # Set error pages for custom locales #
 ######################################
-<If "%{REQUEST_URI} =~ /^\x2Fen(\x2F.*)?$/">
-  ErrorDocument 401 /en/401/index.html
-  ErrorDocument 403 /en/403/index.html
-  ErrorDocument 404 /en/404/index.html
-  ErrorDocument 500 /en/500/index.html
-</If>
-<ElseIf "%{REQUEST_URI} =~ /^\x2Fes(\x2F.*)?$/">
-  ErrorDocument 401 /es/401/index.html
-  ErrorDocument 403 /es/403/index.html
-  ErrorDocument 404 /es/404/index.html
-  ErrorDocument 500 /es/500/index.html
-</ElseIf>
-<ElseIf "%{REQUEST_URI} =~ /^\x2Fpt(\x2F.*)?$/">
-  ErrorDocument 401 /pt-br/401/index.html
-  ErrorDocument 403 /pt-br/403/index.html
-  ErrorDocument 404 /pt-br/404/index.html
-  ErrorDocument 500 /pt-br/500/index.html
-</ElseIf>
+#<If "%{REQUEST_URI} =~ /^\x2Fen(\x2F.*)?$/">
+#  ErrorDocument 401 /en/401/index.html
+#  ErrorDocument 403 /en/403/index.html
+#  ErrorDocument 404 /en/404/index.html
+#  ErrorDocument 500 /en/500/index.html
+#</If>
+# <ElseIf "%{REQUEST_URI} =~ /^\x2Fes(\x2F.*)?$/">
+#  ErrorDocument 401 /es/401/index.html
+#  ErrorDocument 403 /es/403/index.html
+#  ErrorDocument 404 /es/404/index.html
+#  ErrorDocument 500 /es/500/index.html
+#</ElseIf>
+#<ElseIf "%{REQUEST_URI} =~ /^\x2Fpt(\x2F.*)?$/">
+#  ErrorDocument 401 /pt-br/401/index.html
+#  ErrorDocument 403 /pt-br/403/index.html
+#  ErrorDocument 404 /pt-br/404/index.html
+#  ErrorDocument 500 /pt-br/500/index.html
+#</ElseIf>
 ##################################
 # Set default locale error pages #
 ##################################
-<Else>
-  ErrorDocument 401 /en/401/index.html
-  ErrorDocument 403 /en/403/index.html
-  ErrorDocument 404 /en/404/index.html
-  ErrorDocument 500 /en/500/index.html
-</Else>
+#<Else>
+#  ErrorDocument 401 /en/401/index.html
+#  ErrorDocument 403 /en/403/index.html
+#  ErrorDocument 404 /en/404/index.html
+#  ErrorDocument 500 /en/500/index.html
+#</Else>
 
 ####################
 # GZIP COMPRESSION #              
