--- a/static/.htaccess
+++ b/static/.htaccess
@@ -1,78 +1,32 @@
 RewriteEngine On
 RewriteBase /
 
-# Prevent dot directories (hidden directories like .git) to be exposed to the public
-# Except for the .well-known directory used by LetsEncrypt a.o
-# RewriteRule "/\.|^\.(?!well-known/)" - [F]
-
-# Rewrite www.example.com -> example.com -- used with SEO Strict URLs plugin
-# RewriteCond %{HTTP_HOST} .
-# RewriteCond %{HTTP_HOST} ^www.(.*)$ [NC]
-# RewriteRule ^(.*)$ https://%1/$1 [R=301,L]
-
-# Rewrite secure requests properly to prevent SSL cert warnings, e.g. prevent 
-# https://www.example.com when your cert only allows https://secure.example.com
-# RewriteCond %{SERVER_PORT} !^443
-# RewriteRule (.*) https://%{SERVER_NAME}/$1 [R=301,L]
+################
+# Force HTTPS: #
+################
+# RewriteCond %{HTTPS} off
+# RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
 ##############################################
 # Skip redirection if locale already present #
 ##############################################
- RewriteRule ^en(\/.*)?$ - [L]
- RewriteRule ^es(\/.*)?$ - [L]
- RewriteRule ^pt(\/.*)?$ - [L]
- RewriteRule ^pt-br(\/.*)?$ - [L]
-# Serve files if they exist
+RewriteRule ^en(\/.*)?$ - [L]
+RewriteRule ^es(\/.*)?$ - [L]
+RewriteRule ^pt-br(\/.*)?$ - [L]
+
+#############################
+# Serve files if they exist #
+#############################
 RewriteCond %{REQUEST_FILENAME} -f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ - [L]
 
-################
-# Force HTTPS: #
-################
-RewriteCond %{HTTPS} off
-RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
-##############################
-# Set custom locales if fits #
-##############################
-# RewriteCond %{HTTP:Accept-Language} ^es [NC]
-# RewriteRule ^ /es%{REQUEST_URI} [R=301,L]
-# RewriteCond %{HTTP:Accept-Language} ^pt-br [NC]
-# RewriteRule ^ /pt-br%{REQUEST_URI} [R=301,L]
-###############################################
-# Set default locale if no custom locale fits #
-###############################################
-# RewriteRule ^ /en%{REQUEST_URI} [R=301,L]
-######################################
-# Set error pages for custom locales #
-######################################
-#<If "%{REQUEST_URI} =~ /^\x2Fen(\x2F.*)?$/">
-#  ErrorDocument 401 /en/401/index.html
-#  ErrorDocument 403 /en/403/index.html
-#  ErrorDocument 404 /en/404/index.html
-#  ErrorDocument 500 /en/500/index.html
-#</If>
-# <ElseIf "%{REQUEST_URI} =~ /^\x2Fes(\x2F.*)?$/">
-#  ErrorDocument 401 /es/401/index.html
-#  ErrorDocument 403 /es/403/index.html
-#  ErrorDocument 404 /es/404/index.html
-#  ErrorDocument 500 /es/500/index.html
-#</ElseIf>
-#<ElseIf "%{REQUEST_URI} =~ /^\x2Fpt(\x2F.*)?$/">
-#  ErrorDocument 401 /pt-br/401/index.html
-#  ErrorDocument 403 /pt-br/403/index.html
-#  ErrorDocument 404 /pt-br/404/index.html
-#  ErrorDocument 500 /pt-br/500/index.html
-#</ElseIf>
-##################################
-# Set default locale error pages #
-##################################
-#<Else>
-#  ErrorDocument 401 /en/401/index.html
-#  ErrorDocument 403 /en/403/index.html
-#  ErrorDocument 404 /en/404/index.html
-#  ErrorDocument 500 /en/500/index.html
-#</Else>
+#############################
+# MIME TYPE FIX COMPRESSION #              
+#############################
+<IfModule mod_mime.c>
+  AddType application/javascript .js
+</IfModule>
 
 ####################
 # GZIP COMPRESSION #              
@@ -84,6 +38,58 @@ RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
     BrowserMatch ^Mozilla/4\.0[678] no-gzip
     BrowserMatch \bMSIE !no-gzip !gzip-only-text/html
     Header append Vary User-Agent
+</IfModule>
+
+#############################################
+# Enforce Strict Transport Security (HSTS)  #
+#############################################
+<IfModule mod_headers.c>
+    Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
+    Header set X-XSS-Protection "1; mode=block"
+</IfModule>
+
+##################################
+# Hide Server Signature:         #
+##################################
+# ServerSignature Off
+
+##################################
+# Disable Caching for Testing    #
+##################################
+# <IfModule mod_headers.c>
+#     # Set Cache-Control headers to no-cache, no-store for all files
+#     Header set Cache-Control "no-cache, no-store, must-revalidate"
+#     Header set Pragma "no-cache"
+#     Header set Expires "0"
+# </IfModule>
+
+##################################
+# 1 hour cache                   #
+##################################
+<IfModule mod_expires.c>
+    ExpiresActive On
+
+    # Set default caching to 1 hour
+    ExpiresDefault "access plus 1 hour"
+
+    # Set specific file types to cache for 1 hour
+    ExpiresByType image/jpg "access plus 1 hour"
+    ExpiresByType image/jpeg "access plus 1 hour"
+    ExpiresByType image/gif "access plus 1 hour"
+    ExpiresByType image/png "access plus 1 hour"
+    ExpiresByType text/css "access plus 1 hour"
+    ExpiresByType text/javascript "access plus 1 hour"
+    ExpiresByType application/javascript "access plus 1 hour"
+    ExpiresByType application/x-javascript "access plus 1 hour"
+    ExpiresByType application/pdf "access plus 1 hour"
+    ExpiresByType application/x-shockwave-flash "access plus 1 hour"
+    ExpiresByType image/x-icon "access plus 1 hour"
+    ExpiresByType text/html "access plus 1 hour"
+    ExpiresByType application/json "access plus 1 hour"
+</IfModule>
+# cache-control headers
+<IfModule mod_headers.c>
+    Header set Cache-Control "max-age=3600, public"
 </IfModule>
 
 # <IfModule mod_expires.c>
@@ -103,42 +109,17 @@ RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
     # ExpiresDefault "access plus 2 days"
 # </IfModule>
 
-#############################################
-# Enforce Strict Transport Security (HSTS): #
-#############################################
-<IfModule mod_headers.c>
-    Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
-    ##################################
-    # SECURITY HEADERS               #
-    ##################################
-    # Header set X-Content-Type-Options "nosniff"
-    Header set X-XSS-Protection "1; mode=block"
-    # Header set X-Frame-Options "DENY"
-    # Header always set Referrer-Policy "no-referrer-when-downgrade"
-    # Header set Content-Security-Policy "default-src 'self'; img-src 'self' https://*; script-src 'self' 'unsafe-inline' https://*; style-src 'self' 'unsafe-inline';"
-    # Header unset ETag
-    ##################################
-    # PREVENT CLICKJACKING           #
-    ##################################
-    # Header always append X-Frame-Options SAMEORIGIN
-    ##################################
-    # PREVENT MIME-STYPE SNIFFING    #
-    ##################################
-    # Header set X-Content-Type-Options nosniff
-</IfModule>
 
-##################################
-# REMOVE ETAG                    #
-##################################
-# FileETag None
+# Prevent dot directories (hidden directories like .git) to be exposed to the public
+# Except for the .well-known directory used by LetsEncrypt a.o
+# RewriteRule "/\.|^\.(?!well-known/)" - [F]
 
-##################################
-# Hide Server Signature:         #
-##################################
-# ServerSignature Off
-##################################
-# Block Access to Certain Files: #
-##################################
-# <FilesMatch "\.(htaccess|htpasswd|env|ini|phar|zip|sql)$">
-#     Require all denied
-# </FilesMatch>
+# Rewrite www.example.com -> example.com -- used with SEO Strict URLs plugin
+# RewriteCond %{HTTP_HOST} .
+# RewriteCond %{HTTP_HOST} ^www.(.*)$ [NC]
+# RewriteRule ^(.*)$ https://%1/$1 [R=301,L]
+
+# Rewrite secure requests properly to prevent SSL cert warnings, e.g. prevent 
+# https://www.example.com when your cert only allows https://secure.example.com
+# RewriteCond %{SERVER_PORT} !^443
+# RewriteRule (.*) https://%{SERVER_NAME}/$1 [R=301,L]
