--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"@sveltejs/adapter-static": "^3.0.4",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@tailwindcss/typography": "^0.5.15",
 		"autoprefixer": "^10.4.20",
 		"postcss": "^8.4.42",
 		"postcss-load-config": "^6.0.1",
@@ -30,8 +31,11 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@fontsource-variable/inter": "^5.0.20",
+		"@fontsource-variable/lora": "^5.0.19",
 		"@sveltejs/enhanced-img": "^0.3.4",
 		"svelte-youtube-embed": "^0.3.0",
-		"sveltekit-i18n": "^2.4.2"
+		"sveltekit-i18n": "^2.4.2",
+		"swiper": "^11.1.12"
 	}
 }
