--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check .",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"httpsv": "bun run build && bunx http-server ./build"
 	},
 	"type": "module",
 	"dependencies": {
