--- a/static/.htaccess
+++ b/static/.htaccess
@@ -1,44 +1,74 @@
-# # Enable URL rewriting
-# RewriteEngine On
-
-# # If the URL does not end with a slash, append one
-# # RewriteRule ^(.*[^/])$ /$1/ [L,R=301]
-
-# # Serve files if they exist
-# RewriteCond %{REQUEST_FILENAME} -f
-# RewriteRule ^ - [L]
-
-# # Redirect everything else to the index.html
-# RewriteCond %{REQUEST_FILENAME} !-f
-# RewriteCond %{REQUEST_FILENAME} !-d
-# RewriteRule ^ /index.html [L]
-
-# # Force HTTPS (optional, if your site requires it)
-# RewriteCond %{HTTPS} off
-# RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
-
-# # Set default cache control headers (optional, but generally useful)
-# <IfModule mod_headers.c>
-#     Header set Cache-Control "max-age=3600, public"
-# </IfModule>
-
-# Enable mod_rewrite
 RewriteEngine On
-
-## Ensure every URL ends with a slash (optional based on previous needs)
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*[^/])$ /$1/ [L,R=301]
-
-# Serve the proper MIME types
-AddType text/css .css
-AddType application/javascript .js
-AddType image/webp .webp
-AddType image/svg+xml .svg
-AddType font/woff2 .woff2
-
-# Fallback to index.html for SvelteKit routing
 RewriteBase /
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^ index.html [L]
+# DirectorySlash Off
+
+# Prevent dot directories (hidden directories like .git) to be exposed to the public
+# Except for the .well-known directory used by LetsEncrypt a.o
+# RewriteRule "/\.|^\.(?!well-known/)" - [F]
+
+# Rewrite www.example.com -> example.com -- used with SEO Strict URLs plugin
+# RewriteCond %{HTTP_HOST} .
+# RewriteCond %{HTTP_HOST} ^www.(.*)$ [NC]
+# RewriteRule ^(.*)$ https://%1/$1 [R=301,L]
+
+
+# Rewrite secure requests properly to prevent SSL cert warnings, e.g. prevent 
+# https://www.example.com when your cert only allows https://secure.example.com
+# RewriteCond %{SERVER_PORT} !^443
+# RewriteRule (.*) https://%{SERVER_NAME}/$1 [R=301,L]
+
+# Remove trailing slashes
+# NOTE: Use with `DirectorySlash Off`.
+# RewriteCond %{REQUEST_FILENAME} !-f
+# RewriteRule ^(.*[^/])$ /$1/ [L]
+
+# Serve files if exist
+RewriteCond %{REQUEST_FILENAME} -f
+RewriteRule ^(.*)$ - [L]
+
+##############################################
+# Skip redirection if locale already present #
+##############################################
+RewriteRule ^pt(\/.*)?$ - [L]
+RewriteRule ^es(\/.*)?$ - [L]
+RewriteRule ^en(\/.*)?$ - [L]
+
+##############################
+# Set custom locales if fits #
+##############################
+RewriteCond %{HTTP:Accept-Language} ^pt [NC]
+RewriteRule ^ /pt%{REQUEST_URI} [R=301,L]
+
+RewriteCond %{HTTP:Accept-Language} ^es [NC]
+RewriteRule ^ /es%{REQUEST_URI} [R=301,L]
+
+###############################################
+# Set default locale if no custom locale fits #
+###############################################
+RewriteRule ^ /en%{REQUEST_URI} [R=301,L]
+
+######################################
+# Set error pages for custom locales #
+######################################
+<If "%{REQUEST_URI} =~ /^\x2Fpt(\x2F.*)?$/">
+    ErrorDocument 401 /pt/401/index.html
+    ErrorDocument 403 /pt/403/index.html
+    ErrorDocument 404 /pt/404/index.html
+    ErrorDocument 500 /pt/500/index.html
+</If>
+<ElseIf "%{REQUEST_URI} =~ /^\x2Fde(\x2F.*)?$/">
+    ErrorDocument 401 /es/401/index.html
+    ErrorDocument 403 /es/403/index.html
+    ErrorDocument 404 /es/404/index.html
+    ErrorDocument 500 /es/500/index.html
+</ElseIf>
+
+##################################
+# Set default locale error pages #
+##################################
+<Else>
+    ErrorDocument 401 /en/401/index.html
+    ErrorDocument 403 /en/403/index.html
+    ErrorDocument 404 /en/404/index.html
+    ErrorDocument 500 /en/500/index.html
+</Else>
