--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --check .",
     "format": "prettier --write .",
-    "httpsv": "bun run build && bunx http-server ./build"
+    "httpsv": "bunx http-server ./build"
   },
   "type": "module",
   "dependencies": {
