--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@tailwindcss/typography": "^0.5.15",
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.42",
+    "postcss": "^8.4.47",
     "postcss-load-config": "^6.0.1",
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.1.2",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
     "sveltekit-static-sitemap": "^1.1.0",
-    "tailwindcss": "^3.4.10",
+    "tailwindcss": "^3.4.12",
     "typescript": "^5.0.0",
     "vite": "^5.0.3",
     "vite-imagetools": "^7.0.4"
@@ -31,14 +31,15 @@
     "format": "prettier --write .",
     "httpsv": "bunx http-server ./build"
   },
-  "type": "module",
   "dependencies": {
     "@boxfish-studio/sveltekit-cookie-manager": "^1.0.3",
     "@fontsource-variable/inter": "^5.0.20",
     "@fontsource-variable/lora": "^5.0.19",
     "@sveltejs/enhanced-img": "^0.3.4",
+    "cssnano": "^7.0.6",
     "svelte-youtube-embed": "^0.3.0",
     "sveltekit-i18n": "^2.4.2",
     "swiper": "^11.1.12"
-  }
+  },
+  "type": "module"
 }
