--- a/static/.htaccess
+++ b/static/.htaccess
@@ -1,74 +1,76 @@
 RewriteEngine On
 RewriteBase /
-# DirectorySlash Off
 
-# Prevent dot directories (hidden directories like .git) to be exposed to the public
-# Except for the .well-known directory used by LetsEncrypt a.o
-# RewriteRule "/\.|^\.(?!well-known/)" - [F]
+# Redirect www to non-www
+RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
+RewriteRule ^(.*)$ https://%1/$1 [R=301,L]
 
-# Rewrite www.example.com -> example.com -- used with SEO Strict URLs plugin
-# RewriteCond %{HTTP_HOST} .
-# RewriteCond %{HTTP_HOST} ^www.(.*)$ [NC]
-# RewriteRule ^(.*)$ https://%1/$1 [R=301,L]
+# Redirect HTTP to HTTPS
+RewriteCond %{HTTPS} off
+RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
+# Handle SvelteKit routing
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.*)$ /index.html [L]
 
-# Rewrite secure requests properly to prevent SSL cert warnings, e.g. prevent 
-# https://www.example.com when your cert only allows https://secure.example.com
-# RewriteCond %{SERVER_PORT} !^443
-# RewriteRule (.*) https://%{SERVER_NAME}/$1 [R=301,L]
+# Set security headers
+<IfModule mod_headers.c>
+    Header set X-XSS-Protection "1; mode=block"
+    Header set X-Frame-Options "SAMEORIGIN"
+    Header set X-Content-Type-Options "nosniff"
+    Header set Referrer-Policy "strict-origin-when-cross-origin"
+</IfModule>
 
-# Remove trailing slashes
-# NOTE: Use with `DirectorySlash Off`.
-# RewriteCond %{REQUEST_FILENAME} !-f
-# RewriteRule ^(.*[^/])$ /$1/ [L]
+# Enable GZIP compression
+<IfModule mod_deflate.c>
+    AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css text/javascript application/javascript application/x-javascript application/json
+</IfModule>
 
-# Serve files if exist
-RewriteCond %{REQUEST_FILENAME} -f
-RewriteRule ^(.*)$ - [L]
+ <!-- Set browser caching -->
+ <IfModule mod_expires.c>
+     ExpiresActive On
+     ExpiresByType image/jpg "access plus 1 year"
+     ExpiresByType image/jpeg "access plus 1 year"
+     ExpiresByType image/gif "access plus 1 year"
+     ExpiresByType image/png "access plus 1 year"
+     ExpiresByType image/webp "access plus 1 year"
+     ExpiresByType text/css "access plus 1 month"
+     ExpiresByType application/pdf "access plus 1 month"
+     ExpiresByType text/x-javascript "access plus 1 month"
+     ExpiresByType application/x-shockwave-flash "access plus 1 month"
+     ExpiresByType image/x-icon "access plus 1 year"
+     ExpiresDefault "access plus 2 days"
+ </IfModule>
+
+#<IfModule mod_expires.c>
+#    ExpiresActive On
+#    ExpiresByType image/jpeg "access plus 0 seconds"
+#    ExpiresByType image/png "access plus 0 seconds"
+#    ExpiresByType image/webp "access plus 0 seconds"
+#    ExpiresByType text/css "access plus 0 seconds"
+#    ExpiresByType text/html "access plus 0 seconds"
+#    ExpiresByType application/javascript "access plus 0 seconds"
+#</IfModule>
 
 ##############################################
 # Skip redirection if locale already present #
 ##############################################
-RewriteRule ^pt(\/.*)?$ - [L]
-RewriteRule ^es(\/.*)?$ - [L]
+# RewriteRule ^pt(\/.*)?$ - [L]
+# RewriteRule ^es(\/.*)?$ - [L]
 # RewriteRule ^en(\/.*)?$ - [L]
 
 ##############################
 # Set custom locales if fits #
 ##############################
-RewriteCond %{HTTP:Accept-Language} ^pt [NC]
-RewriteRule ^ /pt%{REQUEST_URI} [R=301,L]
+# RewriteCond %{HTTP:Accept-Language} ^pt [NC]
+# RewriteRule ^ /pt%{REQUEST_URI} [R=301,L]
 
-RewriteCond %{HTTP:Accept-Language} ^es [NC]
-RewriteRule ^ /es%{REQUEST_URI} [R=301,L]
+# RewriteCond %{HTTP:Accept-Language} ^es [NC]
+# RewriteRule ^ /es%{REQUEST_URI} [R=301,L]
 
 ###############################################
 # Set default locale if no custom locale fits #
 ###############################################
 # RewriteRule ^ /en%{REQUEST_URI} [R=301,L]
-RewriteRule ^ /pt%{REQUEST_URI} [R=301,L]
-
-######################################
-# Set error pages for custom locales #
-######################################
-#<If "%{REQUEST_URI} =~ /^\x2Fpt(\x2F.*)?$/">
-#    ErrorDocument 401 /pt-br/401/index.html
-#    ErrorDocument 403 /pt-br/403/index.html
-#   ErrorDocument 404 /pt-br/404/index.html
-#</If>
-#<ElseIf "%{REQUEST_URI} =~ /^\x2Fde(\x2F.*)?$/">
- #   ErrorDocument 401 /es/401/index.html
-  #  ErrorDocument 403 /es/403/index.html
-   # ErrorDocument 404 /es/404/index.html
-    #ErrorDocument 500 /es/500/index.html
-#</ElseIf>
-
-##################################
-# Set default locale error pages #
-##################################
-#<Else>
- #   ErrorDocument 401 /en/401/index.html
-  #  ErrorDocument 403 /en/403/index.html
-   # ErrorDocument 404 /en/404/index.html
-    #ErrorDocument 500 /en/500/index.html
-#</Else>
+# RewriteRule ^ /pt%{REQUEST_URI} [R=301,L]
