--- a/static/.htaccess
+++ b/static/.htaccess
@@ -1,13 +1,13 @@
+# Enable rewrite engine
 RewriteEngine On
-RewriteBase /
 
 # Redirect www to non-www
 RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
 RewriteRule ^(.*)$ https://%1/$1 [R=301,L]
 
 # Redirect HTTP to HTTPS
-RewriteCond %{HTTPS} off
-RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+# RewriteCond %{HTTPS} off
+# RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
 # Handle SvelteKit routing
 RewriteCond %{REQUEST_FILENAME} !-f
@@ -27,50 +27,28 @@ RewriteRule ^(.*)$ /index.html [L]
     AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css text/javascript application/javascript application/x-javascript application/json
 </IfModule>
 
- <!-- Set browser caching -->
- <IfModule mod_expires.c>
-     ExpiresActive On
-     ExpiresByType image/jpg "access plus 1 year"
-     ExpiresByType image/jpeg "access plus 1 year"
-     ExpiresByType image/gif "access plus 1 year"
-     ExpiresByType image/png "access plus 1 year"
-     ExpiresByType image/webp "access plus 1 year"
-     ExpiresByType text/css "access plus 1 month"
-     ExpiresByType application/pdf "access plus 1 month"
-     ExpiresByType text/x-javascript "access plus 1 month"
-     ExpiresByType application/x-shockwave-flash "access plus 1 month"
-     ExpiresByType image/x-icon "access plus 1 year"
-     ExpiresDefault "access plus 2 days"
- </IfModule>
+# Set browser caching
+<IfModule mod_expires.c>
+    ExpiresActive On
+    ExpiresByType image/jpg "access plus 1 year"
+    ExpiresByType image/jpeg "access plus 1 year"
+    ExpiresByType image/gif "access plus 1 year"
+    ExpiresByType image/png "access plus 1 year"
+    ExpiresByType image/webp "access plus 1 year"
+    ExpiresByType text/css "access plus 1 month"
+    ExpiresByType application/pdf "access plus 1 month"
+    ExpiresByType text/x-javascript "access plus 1 month"
+    ExpiresByType application/x-shockwave-flash "access plus 1 month"
+    ExpiresByType image/x-icon "access plus 1 year"
+    ExpiresDefault "access plus 2 days"
+</IfModule>
 
-#<IfModule mod_expires.c>
-#    ExpiresActive On
-#    ExpiresByType image/jpeg "access plus 0 seconds"
-#    ExpiresByType image/png "access plus 0 seconds"
-#    ExpiresByType image/webp "access plus 0 seconds"
-#    ExpiresByType text/css "access plus 0 seconds"
-#    ExpiresByType text/html "access plus 0 seconds"
-#    ExpiresByType application/javascript "access plus 0 seconds"
-#</IfModule>
-
-##############################################
-# Skip redirection if locale already present #
-##############################################
-# RewriteRule ^pt(\/.*)?$ - [L]
-# RewriteRule ^es(\/.*)?$ - [L]
-# RewriteRule ^en(\/.*)?$ - [L]
-
-##############################
-# Set custom locales if fits #
-##############################
-# RewriteCond %{HTTP:Accept-Language} ^pt [NC]
-# RewriteRule ^ /pt%{REQUEST_URI} [R=301,L]
-
-# RewriteCond %{HTTP:Accept-Language} ^es [NC]
-# RewriteRule ^ /es%{REQUEST_URI} [R=301,L]
-
-###############################################
-# Set default locale if no custom locale fits #
-###############################################
-# RewriteRule ^ /en%{REQUEST_URI} [R=301,L]
-# RewriteRule ^ /pt%{REQUEST_URI} [R=301,L]
+# <IfModule mod_expires.c>
+#     ExpiresActive On
+#     ExpiresByType image/jpeg "access plus 0 seconds"
+#     ExpiresByType image/png "access plus 0 seconds"
+#     ExpiresByType image/webp "access plus 0 seconds"
+#     ExpiresByType text/css "access plus 0 seconds"
+#     ExpiresByType text/html "access plus 0 seconds"
+#     ExpiresByType application/javascript "access plus 0 seconds"
+# </IfModule>
