--- a/static/.htaccess
+++ b/static/.htaccess
@@ -1,30 +1,37 @@
-# RewriteEngine On
+RewriteEngine On
 
-# # Redirect www to non-www
-# RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
-# RewriteRule ^(.*)$ https://%1/$1 [R=301,L]
+# Redireciona solicitações que não sejam /app/build/ para /app/build/
+# RewriteCond %{REQUEST_URI} !^/app/build/
+# RewriteRule ^(.*)$ /app/build/$1 [L]
 
-# # Redirect HTTP to HTTPS
+# Redireciona solicitações para arquivos/diretórios inexistentes para /app/build/index.html
+# RewriteRule ^(.*)$ /app/build/index.html [L]
+
+# Redirect www to non-www
+RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
+RewriteRule ^(.*)$ https://%1/$1 [R=301,L]
+
+# Redirect HTTP to HTTPS
 # RewriteCond %{HTTPS} off
 # RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
-# # Handle SvelteKit routing
-# RewriteCond %{REQUEST_FILENAME} !-f
-# RewriteCond %{REQUEST_FILENAME} !-d
-# RewriteRule ^(.*)$ /index.html [L]
+# Handle SvelteKit routing
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.*)$ /index.html [L]
 
 # Set security headers
-# <IfModule mod_headers.c>
-#     Header set X-XSS-Protection "1; mode=block"
-#     Header set X-Frame-Options "SAMEORIGIN"
-#     Header set X-Content-Type-Options "nosniff"
-#     Header set Referrer-Policy "strict-origin-when-cross-origin"
-# </IfModule>
+<IfModule mod_headers.c>
+    Header set X-XSS-Protection "1; mode=block"
+    Header set X-Frame-Options "SAMEORIGIN"
+    Header set X-Content-Type-Options "nosniff"
+    Header set Referrer-Policy "strict-origin-when-cross-origin"
+</IfModule>
 
 # Enable GZIP compression
-# <IfModule mod_deflate.c>
-#     AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css text/javascript application/javascript application/x-javascript application/json
-# </IfModule>
+<IfModule mod_deflate.c>
+    AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css text/javascript application/javascript application/x-javascript application/json
+</IfModule>
 
 # Set browser caching
 # <IfModule mod_expires.c>
@@ -42,34 +49,34 @@
 #     ExpiresDefault "access plus 2 days"
 # </IfModule>
 
-# <IfModule mod_expires.c>
-#     ExpiresActive On
-#     ExpiresByType image/jpeg "access plus 0 seconds"
-#     ExpiresByType image/png "access plus 0 seconds"
-#     ExpiresByType image/webp "access plus 0 seconds"
-#     ExpiresByType text/css "access plus 0 seconds"
-#     ExpiresByType text/html "access plus 0 seconds"
-#     ExpiresByType application/javascript "access plus 0 seconds"
-# </IfModule>
+<IfModule mod_expires.c>
+    ExpiresActive On
+    ExpiresByType image/jpeg "access plus 0 seconds"
+    ExpiresByType image/png "access plus 0 seconds"
+    ExpiresByType image/webp "access plus 0 seconds"
+    ExpiresByType text/css "access plus 0 seconds"
+    ExpiresByType text/html "access plus 0 seconds"
+    ExpiresByType application/javascript "access plus 0 seconds"
+</IfModule>
 
-##############################################
-# Skip redirection if locale already present #
-##############################################
-# RewriteRule ^pt(\/.*)?$ - [L]
-# RewriteRule ^es(\/.*)?$ - [L]
+#############################################
+#Skip redirection if locale already present #
+#############################################
+RewriteRule ^pt(\/.*)?$ - [L]
+RewriteRule ^es(\/.*)?$ - [L]
 # RewriteRule ^en(\/.*)?$ - [L]
 
-##############################
-# Set custom locales if fits #
-##############################
-# RewriteCond %{HTTP:Accept-Language} ^pt [NC]
-# RewriteRule ^ /pt%{REQUEST_URI} [R=301,L]
+#############################
+#Set custom locales if fits #
+#############################
+RewriteCond %{HTTP:Accept-Language} ^pt [NC]
+RewriteRule ^ /pt%{REQUEST_URI} [R=301,L]
 
-# RewriteCond %{HTTP:Accept-Language} ^es [NC]
-# RewriteRule ^ /es%{REQUEST_URI} [R=301,L]
+RewriteCond %{HTTP:Accept-Language} ^es [NC]
+RewriteRule ^ /es%{REQUEST_URI} [R=301,L]
 
-###############################################
-# Set default locale if no custom locale fits #
-###############################################
+##############################################
+#Set default locale if no custom locale fits #
+##############################################
 # RewriteRule ^ /en%{REQUEST_URI} [R=301,L]
-# RewriteRule ^ /pt%{REQUEST_URI} [R=301,L]
+RewriteRule ^ /pt%{REQUEST_URI} [R=301,L]
